--- a/scss/_menu.scss
+++ b/scss/_menu.scss
@@ -7,7 +7,7 @@
     right: 0;
     top: -64rem;
     padding-top: 9.6rem;
-   
+    
     
    
     ul{
@@ -23,7 +23,7 @@
             flex-direction: column;
             align-items: center;
             text-align: center;
-            margin: 0 auto;
+        
             span{
                 color: #9D9D9D;
                 font-weight: 500;
@@ -125,4 +125,21 @@
     @media (max-width:1100px) {
         visibility:hidden ;
     }
+}
+.mouseoutdivJ{
+    width: 100%;
+    height: 1rem;
+    font-size: 0px;
+    bottom: 0;
+    background: none;
+    position: absolute;
+}
+.mouseoutdivE{
+    width: 100%;
+    height: 1rem;
+    font-size: 0px;
+    bottom: 0;
+    
+    background: none;
+    position: absolute;
 }
