--- a/scss/main.css
+++ b/scss/main.css
@@ -233,7 +233,7 @@ input {
   .card-games .last-card {
     max-width: 15.6rem;
     min-width: 15.6rem;
-    max-height: 21.2rem;
+    max-height: 21.4rem;
   }
   .card-games .last-card img {
     width: 50%;
@@ -319,7 +319,7 @@ header #logo_container .right #conta:hover span {
 }
 header #logo_container .right #logar {
   gap: 0.6rem;
-  height: 100%;
+  height: 4.3remd;
 }
 @media (min-width: 1100px) {
   header .menu {
@@ -378,8 +378,14 @@ header #logo_container .right #logar {
   opacity: 1;
   filter: grayscale(0%);
 }
-#s-main .slide-progress-bar span {
-  height: 2px;
+#s-main .carousel-progress {
+  width: 100%;
+  position: absolute;
+  z-index: 70;
+  bottom: 0;
+}
+#s-main .carousel-progress .progress {
+  height: 0.3rem;
   width: 100%;
   position: absolute;
   bottom: 0;
@@ -584,7 +590,7 @@ header #logo_container .right #logar {
     right: 0rem;
     justify-content: space-between !important;
     padding-bottom: 8.6rem;
-    padding-top: 3.2rem;
+    padding-top: 6.2rem;
     margin-right: 3rem;
   }
 }
@@ -971,65 +977,81 @@ header #logo_container .right #logar {
 @-webkit-keyframes menuJ {
   from {
     top: -64rem;
+    opacity: 0;
   }
   to {
     top: 0;
+    opacity: 1;
   }
 }
 @keyframes menuJ {
   from {
     top: -64rem;
+    opacity: 0;
   }
   to {
     top: 0;
+    opacity: 1;
   }
 }
 @-webkit-keyframes menuJOut {
   from {
     top: 0rem;
+    opacity: 1;
   }
   to {
     top: -64rem;
+    opacity: 0;
   }
 }
 @keyframes menuJOut {
   from {
     top: 0rem;
+    opacity: 1;
   }
   to {
     top: -64rem;
+    opacity: 0;
   }
 }
 @-webkit-keyframes menuE {
   from {
     top: -52rem;
+    opacity: 0;
   }
   to {
     top: 0rem;
+    opacity: 1;
   }
 }
 @keyframes menuE {
   from {
     top: -52rem;
+    opacity: 0;
   }
   to {
     top: 0rem;
+    opacity: 1;
   }
 }
 @-webkit-keyframes menuEOut {
   from {
     top: 0rem;
+    opacity: 1;
   }
   to {
     top: -52rem;
+    opacity: 0;
   }
 }
 @keyframes menuEOut {
   from {
     top: 0rem;
+    opacity: 1;
   }
   to {
     top: -52rem;
+    opacity: 0;
   }
 }
 @-webkit-keyframes loginAn {
@@ -1129,7 +1151,6 @@ header #logo_container .right #logar {
   flex-direction: column;
   align-items: center;
   text-align: center;
-  margin: 0 auto;
 }
 #jogos ul a span {
   color: #9D9D9D;
@@ -1226,4 +1247,22 @@ header #logo_container .right #logar {
   #esportes {
     visibility: hidden;
   }
+}
+
+.mouseoutdivJ {
+  width: 100%;
+  height: 1rem;
+  font-size: 0px;
+  bottom: 0;
+  background: none;
+  position: absolute;
+}
+
+.mouseoutdivE {
+  width: 100%;
+  height: 1rem;
+  font-size: 0px;
+  bottom: 0;
+  background: none;
+  position: absolute;
 }/*# sourceMappingURL=main.css.map */
