--- a/scss/_home.scss
+++ b/scss/_home.scss
@@ -339,7 +339,7 @@ header{
                     
                     visibility: hidden;
                     opacity: 0;
-                    transition: visibility 0.2s, opacity 0.3s linear;
+                    transition: 0.2s, opacity 0.3s linear;
                 }
             }
             .gifs{
@@ -347,7 +347,7 @@ header{
                     min-height: 15.8rem;
                     position: absolute;
                     visibility: hidden;
-                    transition: visibility 0.2s, opacity 0.3s linear;
+                    transition:  0.2s, opacity 0.3s linear;
                     opacity: 0;
                 
             }
@@ -356,14 +356,14 @@ header{
                 
                 .gifs{
                     visibility: visible;
-                    transition: visibility 0.3s, opacity 0.3s linear;
+                    transition:  0.3s, opacity 0.3s linear;
                     opacity: 1;
                 }
                 
                 .b-hover{
                     opacity: 1;
                     visibility: visible;
-                    transition: visibility 0.3s, opacity 0.3s linear;
+                    transition:  0.3s, opacity 0.3s linear;
                 }
 
             
