--- a/scss/main.css
+++ b/scss/main.css
@@ -544,25 +544,25 @@ header #logo_container .right #logar {
 #s-main .container .d-right .trailer .trailer-thumb button .b-hover {
   visibility: hidden;
   opacity: 0;
-  transition: visibility 0.2s, opacity 0.3s linear;
+  transition: 0.2s, opacity 0.3s linear;
 }
 #s-main .container .d-right .trailer .trailer-thumb .gifs {
   width: 28rem;
   min-height: 15.8rem;
   position: absolute;
   visibility: hidden;
-  transition: visibility 0.2s, opacity 0.3s linear;
+  transition: 0.2s, opacity 0.3s linear;
   opacity: 0;
 }
 #s-main .container .d-right .trailer .trailer-thumb:hover .gifs {
   visibility: visible;
-  transition: visibility 0.3s, opacity 0.3s linear;
+  transition: 0.3s, opacity 0.3s linear;
   opacity: 1;
 }
 #s-main .container .d-right .trailer .trailer-thumb:hover .b-hover {
   opacity: 1;
   visibility: visible;
-  transition: visibility 0.3s, opacity 0.3s linear;
+  transition: 0.3s, opacity 0.3s linear;
 }
 @media (max-width: 1100px) {
   #s-main .d-left {
