--- a/scss/_menu.scss
+++ b/scss/_menu.scss
@@ -15,7 +15,7 @@
         padding-bottom: 8.5rem;
         display: grid;
         grid-template-columns: repeat(6, 1fr);
-        grid-gap: 9.2rem 3.2rem;
+        grid-gap: 9.2rem 10.2rem;
         width: 100%;
         a{
             max-width: 10.5rem;
@@ -23,6 +23,7 @@
             flex-direction: column;
             align-items: center;
             text-align: center;
+            margin: 0 auto;
         
             span{
                 color: #9D9D9D;
@@ -125,21 +126,4 @@
     @media (max-width:1100px) {
         visibility:hidden ;
     }
-}
-.mouseoutdivJ{
-    width: 100%;
-    height: 1rem;
-    font-size: 0px;
-    bottom: 0;
-    background: none;
-    position: absolute;
-}
-.mouseoutdivE{
-    width: 100%;
-    height: 1rem;
-    font-size: 0px;
-    bottom: 0;
-    
-    background: none;
-    position: absolute;
 }
