--- a/scss/main.css
+++ b/scss/main.css
@@ -390,8 +390,8 @@ header #logo_container .right #logar {
   position: absolute;
   bottom: 0;
   background-color: #00AEFF;
-  -webkit-animation: progress 4500ms linear;
-          animation: progress 4500ms linear;
+  -webkit-animation: progress 5500ms linear;
+          animation: progress 5500ms linear;
 }
 #s-main .swiper_container {
   z-index: 1;
@@ -1142,7 +1142,7 @@ header #logo_container .right #logar {
   padding-bottom: 8.5rem;
   display: grid;
   grid-template-columns: repeat(6, 1fr);
-  grid-gap: 9.2rem 3.2rem;
+  grid-gap: 9.2rem 10.2rem;
   width: 100%;
 }
 #jogos ul a {
@@ -1151,6 +1151,7 @@ header #logo_container .right #logar {
   flex-direction: column;
   align-items: center;
   text-align: center;
+  margin: 0 auto;
 }
 #jogos ul a span {
   color: #9D9D9D;
@@ -1247,22 +1248,4 @@ header #logo_container .right #logar {
   #esportes {
     visibility: hidden;
   }
-}
-
-.mouseoutdivJ {
-  width: 100%;
-  height: 1rem;
-  font-size: 0px;
-  bottom: 0;
-  background: none;
-  position: absolute;
-}
-
-.mouseoutdivE {
-  width: 100%;
-  height: 1rem;
-  font-size: 0px;
-  bottom: 0;
-  background: none;
-  position: absolute;
 }/*# sourceMappingURL=main.css.map */
