--- a/scss/_menu.scss
+++ b/scss/_menu.scss
@@ -69,7 +69,7 @@
         }
     }
     @media (max-width:1100px) {
-        visibility:hidden ;
+        display: none;
     }
 }
 
@@ -87,7 +87,7 @@
         
         display: grid;
         grid-template-columns: repeat(5, 1fr);
-        grid-gap: 6.4rem;
+        
         padding-top: 5.5rem;
         padding-bottom: 9.3rem;
         a{
@@ -124,6 +124,6 @@
         }
     }
     @media (max-width:1100px) {
-        visibility:hidden ;
+        display: none;
     }
 }
