--- a/scss/main.css
+++ b/scss/main.css
@@ -839,15 +839,16 @@ header #logo_container .right #logar {
   background-color: rgba(0, 0, 0, 0.5);
   position: fixed;
   top: 0;
-  right: 0;
-  bottom: 0;
   left: 0;
   transition: all 0.4s;
   z-index: 99;
   visibility: hidden;
   height: 100%;
+  width: 100%;
+  margin: 0 auto;
 }
 .login .login_content {
+  position: relative;
   width: 69.8rem;
   height: 60rem;
   background-image: url(../Image_Blizzard/bg_logar.png);
@@ -1190,7 +1191,7 @@ header #logo_container .right #logar {
 }
 @media (max-width: 1100px) {
   #jogos {
-    visibility: hidden;
+    display: none;
   }
 }
 
@@ -1208,7 +1209,6 @@ header #logo_container .right #logar {
 #esportes ul {
   display: grid;
   grid-template-columns: repeat(5, 1fr);
-  grid-gap: 6.4rem;
   padding-top: 5.5rem;
   padding-bottom: 9.3rem;
 }
@@ -1246,6 +1246,6 @@ header #logo_container .right #logar {
 }
 @media (max-width: 1100px) {
   #esportes {
-    visibility: hidden;
+    display: none;
   }
 }/*# sourceMappingURL=main.css.map */
